; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_i2c.c_I2CMasterIntStatusEx.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_i2c.c_I2CMasterIntStatusEx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@I2C_O_MMIS = common dso_local global i64 0, align 8
@I2C_O_MRIS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @I2CMasterIntStatusEx(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i64, i64* %4, align 8
  %7 = call i32 @_I2CBaseValid(i64 %6)
  %8 = call i32 @ASSERT(i32 %7)
  %9 = load i32, i32* %5, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %2
  %12 = load i64, i64* %4, align 8
  %13 = load i64, i64* @I2C_O_MMIS, align 8
  %14 = add nsw i64 %12, %13
  %15 = call i64 @HWREG(i64 %14)
  store i64 %15, i64* %3, align 8
  br label %21

16:                                               ; preds = %2
  %17 = load i64, i64* %4, align 8
  %18 = load i64, i64* @I2C_O_MRIS, align 8
  %19 = add nsw i64 %17, %18
  %20 = call i64 @HWREG(i64 %19)
  store i64 %20, i64* %3, align 8
  br label %21

21:                                               ; preds = %16, %11
  %22 = load i64, i64* %3, align 8
  ret i64 %22
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @_I2CBaseValid(i64) #1

declare dso_local i64 @HWREG(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
